# uber-clone-backend

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/routes/: auth.py  drivers.py  rides.py  users.py  websocket.py
backend/app/core/: config.py  exceptions.py  geo.py  kafka.py  redis.py  security.py  websocket_manager.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/: env.py  script.py.mako
backend/app/db/migrations/versions/: 20260101_0000-0001_enable_postgis.py  20260101_0010-0002_users_refresh_tokens.py  20260101_0020-0003_drivers.py  20260101_0030-0004_rides.py
backend/app/models/: __init__.py  driver.py  ride.py  user.py
backend/app/repositories/: driver_repository.py  ride_repository.py  user_repository.py
backend/app/schemas/: auth.py  driver.py  ride.py  user.py
backend/app/services/: auth_service.py  driver_service.py  pricing_service.py  ride_service.py  user_service.py
backend/scripts/: explain_matching.py  explain_matching.sql
backend/tests/: conftest.py  test_auth.py  test_drivers.py  test_edge_cases.py  test_kafka.py  test_matching.py  test_pricing.py  test_rides.py  test_users.py  test_websocket.py  test_websocket_edges.py
frontend/: .env.example  .gitignore  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: DriverView.jsx  Map.jsx  RideRequest.jsx  RideStatus.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/hooks/: useRideStatus.js  useWebSocket.js
frontend/src/lib/: api.js  config.js  tokens.js
frontend/src/pages/: Home.jsx  Login.jsx  Register.jsx
